fixed styling for non iPhone 6 mobile devices

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -27,7 +27,7 @@ width: 100%;
 bottom:50px;
 clear: both;
 float: none;
-height: 500px;
+height: 70%;
 
 }
 
@@ -56,7 +56,7 @@ width:90%
 
 #recommended-jobs-header {
 color: #fff;
-height: 70px;
+height: 10%;
 position: absolute;
 width: 100%;
 overflow:visible;
